gloo/base-services/monitoring-virtual-services.yaml
---
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: grafana-service
  namespace: gloo-system
spec:
  displayName: grafana-service
  virtualHost:
    domains:
    - 'grafana.localtest.me'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          kube:
            ref:
              name: kube-prometheus-stack-grafana
              namespace: monitoring
            port: 80
---
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: prometheus-service
  namespace: gloo-system
spec:
  displayName: prometheus-service
  virtualHost:
    domains:
    - 'prometheus.localtest.me'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          kube:
            ref:
              name: kube-prometheus-stack-prometheus
              namespace: monitoring
            port: 9090
---
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: alertmanager-service
  namespace: gloo-system
spec:
  displayName: alertmanager-service
  virtualHost:
    domains:
    - 'alert.localtest.me'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          kube:
            ref:
              name: kube-prometheus-stack-alertmanager
              namespace: monitoring
            port: 9093
---
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: kube-state-metrics-8080
  namespace: gloo-system
spec:
  displayName: kube-state-metrics-8080
  virtualHost:
    domains:
    - 'kube-state-metrics.localtest.me'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          kube:
            ref:
              name: kube-prometheus-stack-kube-state-metrics
              namespace: monitoring
            port: 8080
---
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: node-exporter-service
  namespace: gloo-system
spec:
  displayName: node-exporter-service
  virtualHost:
    domains:
    - 'node-exporter-service.localtest.me'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          kube:
            ref:
              name: kube-prometheus-stack-prometheus-node-exporter
              namespace: monitoring
            port: 9100
